# dependency_list

./: composer.json
Composer/: composer.json
NuGet/: file.csproj  file.fsproj  file.nuspec  file.vcxproj  file2.csproj  packages.config
cargo/: Cargo.toml
golang/: go.mod
maven/: pom.xml  pom2.xml
npm/: package-lock.json  package.json
pip/: pipfile  requirements.txt  setup.py
