[package]
name = "mixed_versions_example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Using caret requirement (^) for latest compatible versions
tokio = "^1.21.0"           # Allows updates up to but not including 2.0.0
serde_json = "^1.0"         # Allows updates up to but not including 2.0.0

# Using exact version (=) for precise control
reqwest = "=0.11.10"        # Only this specific version

# Using tilde (~) for patch-level flexibility
log = "~0.4.14"            # Allows updates up to but not including 0.5.0

# Using comparison operators for custom ranges
anyhow = ">=0.1.68,<0.2.0"  # Any version from 0.1.68 up to but not including 0.2.0

# Development dependencies
[dev-dependencies]
mockall = "0.11.7"         # Exact version for dev tools
